--- a/themes/honestwork/layouts/partials/header.html
+++ b/themes/honestwork/layouts/partials/header.html
@@ -27,9 +27,9 @@
               </a>
             </li>
             <li class="nav-item d-md-inline-block pl-3 pr-0">
-              <a class="btn btn-sm btn-primary u-btn-primary transition-3d-hover" href="/join">
-                Join
-              </a>
+              <a class="typeform-share button btn btn-sm btn-primary u-btn-primary transition-3d-hover" href="https://form.typeform.com/to/HcjEVbnN" data-mode="popup"
+                target="_blank">Join </a>
+              <script> (function () {var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm_share", b = "https://embed.typeform.com/"; if (!gi.call(d, id)) {js = ce.call(d, "script"); js.id = id; js.src = b + "embed.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q)} })() </script>
             </li>
           </ul>
         </div>
