--- a/themes/honestwork/layouts/partials/footer.html
+++ b/themes/honestwork/layouts/partials/footer.html
@@ -22,39 +22,9 @@
       <h3 class="h6">
         <strong>Sign up for our monthly newsletter</strong>
       </h3>
-      <h3 id="subscribeThankYou" class="h6" style="display:none; color: darkolivegreen;">
-        <strong>Subscription complete!</strong>
-      </h3>
-      <form id="subscribeform" class="js-validate js-form-message" action="https://formspree.io/xjvabvek" method="POST">
-        <div class="js-focus-state input-group u-form">
-          <input type="email" class="form-control u-form__input" name="email" required
-            placeholder="Enter your email address" aria-label="Enter your email address" />
-          <span class="input-group-append u-form__append">
-            <button type="submit" class="btn btn-primary u-btn-primary">Subscribe</button>
-          </span>
-        </div>
-      </form>
-      <script type="text/javascript">
-        function subscribeformSubmit(ev) {
-          ev.preventDefault();
-          const form = ev.target;
-          const data = new FormData(form);
-          data.append('form', 'subscribe');
-          const xhr = new XMLHttpRequest();
-          xhr.open(form.method, form.action);
-          xhr.setRequestHeader("Accept", "application/json");
-          xhr.onreadystatechange = () => {
-            if (xhr.readyState !== XMLHttpRequest.DONE) {
-              return;
-            }
-            document.getElementById('subscribeform').remove();
-            document.getElementById('subscribeThankYou').style.display = 'block';
-          };
-          xhr.send(data);
-        }
-        const form = document.getElementById('subscribeform');
-        form.onsubmit = subscribeformSubmit;
-      </script>
+      <a class="typeform-share button btn btn-sm btn-primary u-btn-primary transition-3d-hover" href="https://form.typeform.com/to/jgzE1yl2" data-mode="drawer_right"
+        target="_blank">Sign up </a>
+      <script> (function () {var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm_share", b = "https://embed.typeform.com/"; if (!gi.call(d, id)) {js = ce.call(d, "script"); js.id = id; js.src = b + "embed.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q)} })() </script>
     </div>
   </div>
   <hr class="my-0" />
