--- a/themes/honestwork/layouts/partials/footer.html
+++ b/themes/honestwork/layouts/partials/footer.html
@@ -20,7 +20,7 @@
     {{end}}
     <div class="col-md-7 col-lg-5 mb-4 mb-md-0">
       <h3 class="h6">
-        <strong>Sign up for our monthly newsletter</strong>
+        <strong>Sign up for updates</strong>
       </h3>
       <a class="typeform-share button btn btn-sm btn-primary u-btn-primary transition-3d-hover" href="https://form.typeform.com/to/jgzE1yl2" data-mode="drawer_right"
         target="_blank">Sign up </a>
