--- a/themes/honestwork/layouts/index.html
+++ b/themes/honestwork/layouts/index.html
@@ -15,7 +15,7 @@
           <div class="mx-auto" style="max-width:400px">
             <div class="mb-4">
               <h3 class="h6">
-                <strong>Sign up for our monthly newsletter</strong>
+                <strong>Sign up for updates</strong>
               </h3>
               <a class="typeform-share button btn btn-sm btn-primary u-btn-primary transition-3d-hover" href="https://form.typeform.com/to/jgzE1yl2" data-mode="drawer_right"
                 target="_blank">Sign up </a>
