--- a/themes/honestwork/layouts/index.html
+++ b/themes/honestwork/layouts/index.html
@@ -24,13 +24,16 @@
         </div>
         <div class="col-12 container text-center u-space-1">
           <p>
-            <a href="https://www.facebook.com/Honest-Work-106775901054948/" target="_blank"
-              style="display:inline-block; width: 32px; margin-right:12px;" title="HonestWork Facebook">
+            <a href="https://www.facebook.com/Honest-Work-106775901054948/" target="_blank" style="display:inline-block; width: 32px; margin-right:12px;" title="HonestWork Facebook">
               {{- partial "facebook.html" -}}
             </a>
-            <a href="https://twitter.com/honestwork4all" target="_blank" style="display:inline-block; width: 32px;"
+            <a href="https://twitter.com/honestwork4all" target="_blank" style="display:inline-block; width: 32px; margin-right:12px;"
               title="HonestWork Twitter">
               {{- partial "twitter.html" -}}
+            </a>
+            <a href="https://www.linkedin.com/company/honest-work/" target="_blank" style="display:inline-block; width: 32px;"
+              title="HonestWork LinkedIn">
+              {{- partial "linkedin.html" -}}
             </a>
           </p>
         </div>
