--- a/themes/honestwork/layouts/partials/header.html
+++ b/themes/honestwork/layouts/partials/header.html
@@ -3,7 +3,7 @@
     <div id="logoAndNav" class="container">
       <nav class="js-mega-menu navbar navbar-expand-md u-header__navbar">
         <a class="navbar-brand u-header__navbar-brand" href="/" aria-label="Front">
-          <img src="/logo.png" alt="Honest Work" width="150" />
+          <img src="/logo_new.png" alt="Honest Work" width="150" />
         </a>
         <button type="button" class="navbar-toggler btn u-hamburger" aria-label="Toggle navigation"
           aria-expanded="false" aria-controls="navBar" data-toggle="collapse" data-target="#navBar">
@@ -21,15 +21,21 @@
               </a>
             </li>
             {{ end }}
+            <li class="nav-item">
+              <a class="nav-link" href="https://google.com" target="_blank" rel="noopener">Substack newsletter</a>
+            </li>
             <li class="nav-item d-md-inline-block pl-3 pr-0">
               <a class="btn btn-sm btn-secondary u-btn-secondary transition-3d-hover" href="/donate">
                 Donate
               </a>
             </li>
             <li class="nav-item d-md-inline-block pl-3 pr-0">
-              <a class="typeform-share button btn btn-sm btn-primary u-btn-primary transition-3d-hover" href="https://form.typeform.com/to/HcjEVbnN" data-mode="popup"
+              <a class="button btn btn-sm btn-primary u-btn-primary transition-3d-hover" href="/join">
+                Join
+              </a>
+              <!-- <a class="typeform-share button btn btn-sm btn-primary u-btn-primary transition-3d-hover" href="https://form.typeform.com/to/HcjEVbnN" data-mode="popup"
                 target="_blank">Join </a>
-              <script> (function () {var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm_share", b = "https://embed.typeform.com/"; if (!gi.call(d, id)) {js = ce.call(d, "script"); js.id = id; js.src = b + "embed.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q)} })() </script>
+              <script> (function () {var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm_share", b = "https://embed.typeform.com/"; if (!gi.call(d, id)) {js = ce.call(d, "script"); js.id = id; js.src = b + "embed.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q)} })() </script> -->
             </li>
           </ul>
         </div>
