newsletter | nav link | new logo on coming soon page

--- a/themes/honestwork/layouts/partials/footer.html
+++ b/themes/honestwork/layouts/partials/footer.html
@@ -22,9 +22,10 @@
       <h3 class="h6">
         <strong>Sign up for updates</strong>
       </h3>
-      <a class="typeform-share button btn btn-sm btn-primary u-btn-primary transition-3d-hover" href="https://form.typeform.com/to/jgzE1yl2" data-mode="drawer_right"
+      <!-- <a class="typeform-share button btn btn-sm btn-primary u-btn-primary transition-3d-hover" href="https://form.typeform.com/to/jgzE1yl2" data-mode="drawer_right"
         target="_blank">Sign up </a>
-      <script> (function () {var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm_share", b = "https://embed.typeform.com/"; if (!gi.call(d, id)) {js = ce.call(d, "script"); js.id = id; js.src = b + "embed.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q)} })() </script>
+      <script> (function () {var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm_share", b = "https://embed.typeform.com/"; if (!gi.call(d, id)) {js = ce.call(d, "script"); js.id = id; js.src = b + "embed.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q)} })() </script> -->
+      <a class="button btn btn-sm btn-primary u-btn-primary transition-3d-hover" href="/join">Sign up </a>
     </div>
   </div>
   <hr class="my-0" />
