--- a/themes/honestwork/layouts/partials/header.html
+++ b/themes/honestwork/layouts/partials/header.html
@@ -22,7 +22,7 @@
             </li>
             {{ end }}
             <li class="nav-item">
-              <a class="nav-link" href="https://google.com" target="_blank" rel="noopener">Substack newsletter</a>
+              <a class="nav-link" href="https://newsletter.honestwork.org" target="_blank" rel="noopener">Newsletter</a>
             </li>
             <li class="nav-item d-md-inline-block pl-3 pr-0">
               <a class="btn btn-sm btn-secondary u-btn-secondary transition-3d-hover" href="/donate">
