--- a/themes/honestwork/layouts/_default/single.html
+++ b/themes/honestwork/layouts/_default/single.html
@@ -221,6 +221,7 @@
     {{end}}
 
   </div>
+  <iframe src="https://newsletter.honestwork.org/embed" width="100%" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
 </div>
 
 <div id="stickyBlockEndPoint"></div>
