--- a/themes/honestwork/layouts/index.html
+++ b/themes/honestwork/layouts/index.html
@@ -6,7 +6,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 container text-center u-space-1">
-          <img src="/logo.png" alt="Honest Work" width="300" />
+          <img src="/logo_new.png" alt="Honest Work" width="300" />
         </div>
         <div class="col-12 container text-center u-space-1" style="max-width:600px">
           {{ partial "markdown" (dict "context" . "markdown" .Params.content) }}
