--- a/themes/honestwork/layouts/partials/footer.html
+++ b/themes/honestwork/layouts/partials/footer.html
@@ -18,14 +18,11 @@
       {{end}}
     </div>
     {{end}}
-    <div class="col-md-7 col-lg-5 mb-4 mb-md-0">
+    <div class="col-md-7 col-lg-2 mb-4 mb-md-0">
       <h3 class="h6">
-        <strong>Sign up for updates</strong>
+        <strong>Social</strong>
       </h3>
-      <!-- <a class="typeform-share button btn btn-sm btn-primary u-btn-primary transition-3d-hover" href="https://form.typeform.com/to/jgzE1yl2" data-mode="drawer_right"
-        target="_blank">Sign up </a>
-      <script> (function () {var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm_share", b = "https://embed.typeform.com/"; if (!gi.call(d, id)) {js = ce.call(d, "script"); js.id = id; js.src = b + "embed.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q)} })() </script> -->
-      <a class="button btn btn-sm btn-primary u-btn-primary transition-3d-hover" href="/join">Sign up </a>
+      {{- partial "social-links.html" . -}}
     </div>
   </div>
   <hr class="my-0" />
